<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notifications</string>
    <string name="biginteger_logo">bigInteger Logo</string>
    <string name="normal">Normal</string>
    <string name="big_text_style">Big Text Style</string>
    <string name="big_picture_style">Big Picture Style</string>
    <string name="inbox_style">Inbox Style</string>
    <string name="custom_view">Custom View</string>
    <string name="ticker_text">Ticker Text</string>
    <string name="progress">Progress Bar</string>
    <string name="progress_continuous">Progress Bar Continuous</string>
</resources>
